[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="DatoParaAlmacenar" type="LineEdit" parent="."]
margin_left = 245.0
margin_top = 152.0
margin_right = 777.0
margin_bottom = 192.0
text = "Introduzca un dato que se almacenara en la configuraci√≥n de manera persistente."

[node name="SaveBtn" type="Button" parent="."]
margin_left = 252.0
margin_top = 322.0
margin_right = 408.0
margin_bottom = 380.0
text = "Guardar"

[node name="LoadBtn" type="Button" parent="."]
margin_left = 623.0
margin_top = 322.0
margin_right = 779.0
margin_bottom = 380.0
text = "Cargar"

[node name="ResetBtn" type="Button" parent="."]
margin_left = 442.0
margin_top = 420.0
margin_right = 598.0
margin_bottom = 478.0
text = "Eliminar"

[connection signal="focus_entered" from="DatoParaAlmacenar" to="." method="_on_DatoParaAlmacenar_focus_entered"]
[connection signal="pressed" from="SaveBtn" to="." method="_on_SaveBtn_pressed"]
[connection signal="pressed" from="LoadBtn" to="." method="_on_LoadBtn_pressed"]
[connection signal="pressed" from="ResetBtn" to="." method="_on_ResetBtn_pressed"]
